Move mongo to mongodb

--- a/mongodb/docker-compose.yml
+++ b/mongodb/docker-compose.yml
@@ -2,6 +2,8 @@ version: "3.7"
 services:
   mongo:
     image: mongo:3.4.2
+    ports: 
+      - 27017:27017
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: simplepass
